--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,10 @@ credits: 'Credits: Landing Page is a free to use, open source Bootstrap theme cr
 # ----------------------- #
 #    Jekyll & Plugins     #
 # ----------------------- #
-
+gems:
+  - jekyll-sitemap
+whitelist:
+  - jekyll-sitemap
 # Build settings
 markdown: kramdown
 permalink: pretty
