--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ url: http://LorenaOrellana.github.io
 title: LORENA ORELLANA
 email: laop2004@yahoo.es
 author: Lorena Orellana
-description: > # "Apoyo escolar y/o psicopedagógico."
+description: > # "Apoyo escolar y/o psicopedagógico Valdivia y alrededores."
   You can edit this line in _config.yml. It will appear in your document
   head meta (for Google search results) and in your feed.xml site
   description.
