--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,8 @@ url: http://LorenaOrellana.github.io
 title: LORENA ORELLANA
 email: laop2004@yahoo.es
 author: Lorena Orellana
-description: > # "Apoyo escolar y/o psicopedagógico Valdivia y alrededores."
-  You can edit this line in _config.yml. It will appear in your document
-  head meta (for Google search results) and in your feed.xml site
-  description.
+description: >  # "Apoyo escolar y/o psicopedagógico Valdivia y alrededores."
+                Apoyo escolar y/o psicopedagógico Valdivia y alrededores
 copyright: 'Copyright &copy; 2015 Your Name. All Rights Reserved.'
 credits: 'Credits: Landing Page is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com/">Start Bootstrap</a>.'
 
