adjustments search google

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # ----------------------- #
 
 url: http://LorenaOrellana.github.io
-title: LORENA ORELLANA
+title: APOYO ESCOLAR VALDIVIA
 email: laop2004@yahoo.es
 author: Lorena Orellana
 description: >  # "Apoyo escolar y/o psicopedagógico Valdivia y alrededores."
